# rubook

./: .gitignore  Cargo.toml  Dockerfile  README.md  output.txt
.github/workflows/: ci.yml  release.yml
migrations/2023-04-24-194121_create_users_and_books/: down.sql  up.sql
resources/: certificate.pem  key.pem  mirrors.json
rubook/: Cargo.toml
rubook/src/: book_util.rs  main.rs  menu.rs
rubook_backend/: Cargo.toml
rubook_backend/migrations/2023-04-24-194121_create_users_and_books/: up.sql
rubook_backend/migrations/2023-05-10-173504_create_mirrors_and_ip_tables/: down.sql  up.sql
rubook_backend/src/: auth.rs  db_models.rs  db_util.rs  main.rs  routes.rs  schema.rs
rubook_lib/: Cargo.toml
rubook_lib/src/: backend_util.rs  db_util.rs  lib.rs  libgen_util.rs  models.rs  schema.rs  user.rs
rubook_lib/src/libgen/: download.rs  mirrors.rs  mod.rs  models.rs  search.rs
src/: book_util.rs  db_util.rs  libgen_util.rs  main.rs  menu.rs  models.rs  user.rs
src/libgen/: download.rs  mirrors.rs  models.rs  search.rs
