[package]
name = "rubook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["json", "stream"] }
tokio = {version = "1.27.0", features = ["full" ]}
tokio-stream = "0.1.12"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
inquire = "0.6.1"
scraper = "0.16.0"
lazy_static = "1.4.0"
regex = "1.7.3"
bytes = "1.4.0"
