[package]
name = "rubook"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/akotro/rubook"

[[bin]]
name = "rubook"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rubook_lib = { path = "../rubook_lib" }
reqwest = { version = "0.11.16", features = ["json", "stream"] }
tokio = {version = "1.27.0", features = ["full" ]}
serde_json = "1.0.95"
inquire = "0.6.1"
