[package]
name = "rubook_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rubook_lib = { path = "../rubook_lib" }
actix-web = "4"
jsonwebtoken = "8.3.0"
argon2 = "0.5.0"
uuid = { version = "1.3.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4.24"
env_logger = "0.10.0"
diesel = { version = "2.0.0", features = ["mysql", "r2d2"] }
r2d2 = "0.8.10"
diesel_migrations = "2.0.0"
serde = { version = "1.0.159", features = ["derive"] }
dotenvy = "0.15"
