[package]
name = "rubook_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["mysql", "r2d2"] }
diesel_migrations = "2.0.0"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
tokio = {version = "1.27.0", features = ["full" ]}
tokio-stream = "0.1.12"
r2d2 = "0.8.10"
reqwest = { version = "0.11.16", features = ["json", "stream"] }
dotenvy = "0.15"
inquire = "0.6.1"
regex = "1.7.3"
bytes = "1.4.0"
lazy_static = "1.4.0"
