[package]
name = "rubook_lib"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
tokio = {version = "1.27.0", features = ["full" ]}
futures = "0.3.28"
reqwest = { version = "0.11.16", features = ["json", "stream"] }
inquire = "0.6.1"
regex = "1.7.3"
bytes = "1.4.0"
lazy_static = "1.4.0"
